# NBA_AMLAA_Assignment1

./: pyproject.toml  test.ipynb
NBA_AMLAA_Assignment1/: LICENSE  Makefile  README.md  setup.py
NBA_AMLAA_Assignment1/docs/: Makefile  conf.py  index.rst  make.bat
NBA_AMLAA_Assignment1/notebooks/: Arora_Shivam-24993747-week1_XGBoost.ipynb  Arora_Shivam-24993747-week2_Logistic_Regression.ipynb  Arora_Shivam-24993747-week3_Random_Forest.ipynb  Badhe_Rugved_24691166_week_1_logistic_regression.ipynb  Badhe_Rugved_24691166_week_2_random_forest.ipynb  Badhe_Rugved_24691166_week_3_gradient_boosting.ipynb  Data_Cleaning.ipynb  Prabhakar_Ananya_25024934_week_1_gaussian.ipynb  Prabhakar_Ananya_25024934_week_2_xgboost.ipynb  Prabhakar_Ananya_25024934_week_3_Logistic_Poly.ipynb  bryan_13312754_week1_randomforestclassifier.ipynb  bryan_13312754_week2_gradientboosting.ipynb  bryan_13312754_week3_logisticregression.ipynb  gb.csv  gbm_submission.csv  gbm_submission_tuned.csv  log_reg_more_add_features.csv  logistic_regression_model.pkl  logistic_regression_pca.pkl  logistic_regression_submission.csv  pca_model.pkl  poly_new_submission.csv  poly_submission.csv  poly_test_submission.csv  predictions_gnb.csv  rcf.csv  rf_submission.csv  rnd_test_submission.csv  target_encoder.pkl  test_submission.csv  trained_model.pkl  xgb_new_submission.csv  xgb_test_submission.csv  xgboost_model.py
NBA_AMLAA_Assignment1/src/visualization/: visualize.py
